[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "RocketGate"
version = "3.8"
authors = [
  {name="RocketGate"},
]
description = "RocketGate Gateway Python SDK"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[tool.hatch.build]
include = [
  "RocketGate.py"
]

[project.urls]
"Homepage" = "https://github.com/rocketgate/rocketgate-python-sdk"
